--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,93 +1,118 @@
-body{
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+ 
+  body {
     width: 700px;
     margin: auto;
-}
-
-header{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 5rem;
-}
-
-.header-container{
-    display: flex;
-    gap: 1.5rem;
-    justify-items: center;
-}
-
-.header-right{
-    display: flex;
-    flex-direction: column;
+   
+    font-family: Arial, sans-serif; 
+  }
   
-}
-.logo{
-width: 80px;
-padding-top: 10%;
-}
-
-.header-item{
-    margin: 0;
-    padding-top: 0.5rem;
-}
-
-.info-container{
-    display: flex;
-    justify-content: space-between;
-}
-.info-left{
+  /* Header styles */
+  header {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: 1fr;
+    grid-template-areas: "left right"; 
+    gap: 1.5rem; 
+    align-items: center; 
+    margin-bottom: 2rem; 
+  }
+  
+  .header-left {
+    grid-area: left; 
+  }
+  
+  .header-right {
+    grid-area: right; 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    height: 400px;
-}
-
-.info-right-top{
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 28px;
-    
-}
-
-.box-container{
-   width: 150px;
-   height: 190px;
-   border: 1px solid black;
-   justify-content: center;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-}
-
-
-.info-item{
+  }
+  
+  .logo {
+    width: 80px;
+  }
+  
+  .header-item {
     margin: 0;
     padding-top: 0.5rem;
-}
+  }
+  
 
-.middle-item{
-    margin: 1rem;
-}
-
-.info-right-middle{
+  .info-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: auto; 
+    gap: 1.5rem; 
+  }
+  
+  .info-left {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem; 
+  }
+  
+  .info-right-top {
     display: flex;
     justify-content: space-around;
-}
+    gap: 1rem;
 
-.info-bottom{
+  }
+  
+  .box-container {
+    border: 1px solid black;
+    display: flex;
+    height: 8rem;
+    width: 8rem;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center; 
+  }
+  
+  .info-item {
+    margin: 0;
+    padding-top: 0.5rem;
+  }
+  
+  .middle-item {
+    margin: 0.5rem 0; 
+  }
+
+  .info-right-container{
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    padding-right: 40px;
-    padding-top: 30px;
-
-}
-.bottom-item{
+    justify-content: space-between;
+   
+  }
+  
+  .info-right-middle {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 6em;
+    gap: 1rem; 
+  }
+  
+  .info-bottom {
+    text-align: right;
+    margin-top: 1rem;
+  }
+  
+  .bottom-item {
     margin: 0;
-}
+  }
+  
+  footer {
+    text-align: right;
+    margin-top: 1rem; 
+  }
+  
 
-footer{
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 25px;
 
-}
+
+
+
